crates/djls-bench/src/snapshots/djls_bench__check__tests__check_workload_corpus_all.snap
---
source: crates/djls-bench/src/check.rs
expression: "CorpusWorkloadSnapshot\n{\n    input: corpus_input_snapshot(corpus), output:\n    checked_workload_snapshot(&db, &files, WorkloadDetail::Corpus, true),\n}"
---
input:
  discovered_file_count: 7269
  synchronized_file_count: 7269
  total_bytes: 11921621
  sorted_records_sha256: 8ffe302b4b0d09aae1d18f434e1a468a2bf6d0947a48b36b9ea66a7b8a49b690
output:
  check_parser_count: 0
  check_validation_count: 19443
  check_code_counts:
    S101: 1
    S108: 10384
    S111: 4102
    S120: 4956
  per_file_checks_sha256: 40e6509b35b932160bc1fcb26b84fec27039a10a3711c5ecb9a6b5d7359174ea
  ide_eligible_file_count: 6214
  ide_diagnostic_count: 19443
  ide_code_counts:
    S101: 1
    S108: 10384
    S111: 4102
    S120: 4956
  normalized_ide_diagnostics_sha256: 4c1eca09683529fa26d13d905c8a633f2d8cec7234e26b97de5b7d31ef0d1d5f
  files_with_diagnostics: 3710
  diagnostic_bearing_paths_sha256: a8a0f1bd52a6193912b93033f514f90b5c3206d83bd69d03c8ba34e145b942cd
  rendered:
    item_count: 19443
    total_bytes: 5179423
    output_sha256: f4958c4894f7a5ca6878b4fa32b8f337b05dfab2b51796376bc3cb95d56f7c8a
