crates/djls-bench/src/snapshots/djls_bench__check__tests__check_workload_corpus_django.snap
---
source: crates/djls-bench/src/check.rs
assertion_line: 858
expression: "CorpusWorkloadSnapshot\n{\n    input: corpus_input_snapshot(corpus), output:\n    checked_workload_snapshot(&db, &files, WorkloadDetail::Corpus, true),\n}"
---
input:
  discovered_file_count: 124
  synchronized_file_count: 124
  total_bytes: 138107
  sorted_records_sha256: ea3cd77a6ea886927c6309d830eff37d6830b5c0a0321f8fa612dae0219d8150
output:
  check_parser_count: 0
  check_validation_count: 181
  check_code_counts:
    S108: 21
    S111: 134
    S120: 26
  per_file_checks_sha256: f2a27e070c2a9c659e34458d554cbba34b8d2e156b527951f4a4ba866a42b7ff
  ide_eligible_file_count: 115
  ide_diagnostic_count: 181
  ide_code_counts:
    S108: 21
    S111: 134
    S120: 26
  normalized_ide_diagnostics_sha256: 695522cd828ee91e559d68a8d16dd4f1a710bda014eaa9267605f187bb550ea5
  files_with_diagnostics: 39
  diagnostic_bearing_paths_sha256: 0b54a9b94eb99a839ccf8d5817d958c7c640aaaf1a19be37873facef790ab4af
  rendered:
    item_count: 181
    total_bytes: 54568
    output_sha256: 8fe497c8b71f3b1afc956b0967df59ac99f10e60bc5a4ab95cefe504fb506605
