crates/djls-bench/src/snapshots/djls_bench__check__tests__check_workload_fixtures.snap
---
source: crates/djls-bench/src/check.rs
assertion_line: 768
expression: "checked_workload_snapshot(&db, &files, WorkloadDetail::Small, true)"
---
check_parser_count: 0
check_validation_count: 24
check_code_counts:
  S111: 24
per_file_checks:
  - path: /templates/large/stress_test.html
    parser_count: 0
    validation_count: 0
    codes: {}
  - path: /templates/large/views_technical_500.html
    parser_count: 0
    validation_count: 22
    codes:
      S111: 22
  - path: /templates/medium/admin_login.html
    parser_count: 0
    validation_count: 1
    codes:
      S111: 1
  - path: /templates/medium/nested_blocks.html
    parser_count: 0
    validation_count: 0
    codes: {}
  - path: /templates/small/dense_tags.html
    parser_count: 0
    validation_count: 0
    codes: {}
  - path: /templates/small/forms_widgets_input.html
    parser_count: 0
    validation_count: 1
    codes:
      S111: 1
per_file_checks_sha256: 585d8ed6d5ff5abca2878caef9d237339d68134b13bbadb3973596972fcaf6d6
ide_eligible_file_count: 6
ide_diagnostic_count: 24
ide_code_counts:
  S111: 24
normalized_ide_diagnostics:
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 104
    start_character: 74
    end_line: 104
    end_character: 86
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 129
    start_character: 34
    end_line: 129
    end_character: 46
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 154
    start_character: 33
    end_line: 154
    end_character: 39
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 196
    start_character: 32
    end_line: 196
    end_character: 44
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 223
    start_character: 52
    end_line: 223
    end_character: 64
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 225
    start_character: 71
    end_line: 225
    end_character: 83
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 251
    start_character: 43
    end_line: 251
    end_character: 50
    message: "Unknown filter 'add'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 277
    start_character: 41
    end_line: 277
    end_character: 51
    message: "Unknown filter 'dictsort'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 309
    start_character: 27
    end_line: 309
    end_character: 33
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 311
    start_character: 23
    end_line: 311
    end_character: 29
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 324
    start_character: 28
    end_line: 324
    end_character: 40
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 329
    start_character: 40
    end_line: 329
    end_character: 52
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 331
    start_character: 59
    end_line: 331
    end_character: 71
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 336
    start_character: 36
    end_line: 336
    end_character: 48
    message: "Unknown filter 'force_escape'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 368
    start_character: 39
    end_line: 368
    end_character: 45
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 390
    start_character: 39
    end_line: 390
    end_character: 45
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 412
    start_character: 39
    end_line: 412
    end_character: 45
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 434
    start_character: 39
    end_line: 434
    end_character: 45
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 452
    start_character: 40
    end_line: 452
    end_character: 50
    message: "Unknown filter 'dictsort'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 455
    start_character: 37
    end_line: 455
    end_character: 43
    message: "Unknown filter 'pprint'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 474
    start_character: 36
    end_line: 474
    end_character: 46
    message: "Unknown filter 'dictsort'"
  - path: /templates/large/views_technical_500.html
    code: S111
    severity: error
    start_line: 477
    start_character: 37
    end_line: 477
    end_character: 43
    message: "Unknown filter 'pprint'"
  - path: /templates/medium/admin_login.html
    code: S111
    severity: error
    start_line: 23
    start_character: 50
    end_line: 23
    end_character: 56
    message: "Unknown filter 'length'"
  - path: /templates/small/forms_widgets_input.html
    code: S111
    severity: error
    start_line: 0
    start_character: 109
    end_line: 0
    end_character: 125
    message: "Unknown filter 'stringformat'"
normalized_ide_diagnostics_sha256: d42cb26fe35b4ede424a368314c5d4d5edcf6745021cef50a3ef00889d1bf101
files_with_diagnostics: 3
diagnostic_bearing_paths:
  - /templates/large/views_technical_500.html
  - /templates/medium/admin_login.html
  - /templates/small/forms_widgets_input.html
diagnostic_bearing_paths_sha256: e2e41bb56fdcd727462b1c350b98ef4a36e4cf7ee5ac10fc48f3b38dc8acf106
rendered:
  item_count: 24
  total_bytes: 5852
  output_sha256: 5645c7d3beeca903038ebb5a977caa301de9c06b470004974c9e5df899a878a9
