crates/djls-bench/src/snapshots/djls_bench__check__tests__diagnostics_render_validation_fixtures.snap
---
source: crates/djls-bench/src/check.rs
expression: "ValidationRenderSnapshot\n{\n    validation_error_count, rendered_count, rendered_bytes,\n    rendered_output_sha256: hasher.finish(),\n}"
---
validation_error_count: 873
rendered_count: 873
rendered_bytes: 190126
rendered_output_sha256: 954895aa81c6aadc4257873af522be2ec2766c4748cf31523e0300718cc93ec2
